sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart: Int = getNombreValeurs();
	var lgr: Int = getNombreValeurs();
	var inverse: Boolean = false;
	do{
		if(ecart > 1){
     		ecart = (ecart.toDouble / 1.3).toInt;
		}
   		var i: Int = 0;
   		while(i + ecart < lgr){
     		if(plusPetit(i, i - 1)){
				echange(i, i - 1);
				tri = true;
     		}
		}
     	i = i + 1;
	}while(ecart > 1 | inverse)
}
